# backend-dam

./: .env  .env-prod  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/versions/: 33404bfe64a6_create_account_table.py
app/: main.py
app/alembic/: env.py
app/config/: config.py  dbconf.py
app/controllers/: auth_controller.py  blog_controller.py  user_controller.py
app/middleware/: auth_middleware.py
app/models/: __init__.py  base_class.py  blog_model.py  user_model.py
app/repositories/: blog_repository.py  user_repository.py
app/routes/: auth_route.py  blog_route.py  user_routes.py
app/schemas/: auth_schema.py  blog_schema.py  user_schema.py
app/utils/: hashing.py
frontend/: api.py  auth.py  blog.py  main.py  utils.py
